# intentio

./: .clang-format  .editorconfig  .gitignore  .hlint.yaml  .travis.yml  CMakeLists.txt  Justfile  LICENSE.txt  Makefile  README.md  azure-pipelines.yml  bors.toml  brittany.yaml  package-common.yaml  stack.yaml  x.py
cmake/Modules/: AddCMockaTest.cmake
compiler/: package.yaml
compiler/src/Intentio/: Annotated.hs  Codegen.hs  Compiler.hs  Diagnostics.hs  Hir.hs  Resolver.hs  TypeMap.hs
compiler/test/Intentio/: DiagnosticSpec.hs  HirSpec.hs
intentioc/: package.yaml
intentioc/app/: Main.hs
intentioc/src/: Intentioc.hs
intentioc/src/Intentioc/: Opts.hs
prelude/: package.yaml
prelude/src/Intentio/: Annotated.hs  Prelude.hs
runtime/: CMakeLists.txt
runtime/api/: none.c  num.c  ops.c  regex.c  rt_meta.c  str.c
runtime/core/: attrs.h  term.c  term.h
runtime/include/: intentio.h
runtime/src/: alltypes.c  alltypes.h  char.c  char.h  config.h.in  float.c  float.h  int.c  int.h  io.c  io.h  memory.c  memory.h  none.c  none.h  num.c  num.h  ops.c  ops.h  regex.c  regex.h  rt_meta.c  rt_meta.h  str.c  str.h  term.c  term.h  type.c  type.h  typeconv.c  util.c  util.h
runtime/src/util/: attrs.h  ieo_assert.h  min_max.c  min_max.h  pp.h  typeck.c  typeck.h
runtime/test/: CMakeLists.txt  common.h  float.c  hello.c  int.c  none.c  str.c  term.c  type.c  typeconv.c
src/: package-common.yaml
src/build-tool/: README.md  build.py  runcookiecutter.py  utils.py
src/build-tool/cookiecutters/: README.md
src/intentio-codegen/: package.yaml
src/intentio-core/: package.yaml
src/intentio-driver/: package.yaml
src/intentio-driver/app/: Main.hs
src/intentio-hir/: package.yaml
src/intentio-interactive/: package.yaml
src/intentio-interactive/app/: Main.hs
src/intentio-syntax/: package.yaml
src/intentio-testutil/: package.yaml
std/: prelude.ieo  simpleparsing.ieo
syntax/: package.yaml
syntax/fixtures/lexer/: floats.txt  identifiers_keywords_and_operators.txt  identifiers_keywords_and_operators.txt.expected  integers.txt  integers.txt.expected  strings.txt  strings.txt.expected
syntax/fixtures/parser-expr/: fun-call.txt.expected  if-else.txt.expected  ignore-block.txt  let-decl.txt.expected  math.txt  math.txt.expected  return.txt.expected  while.txt.expected
syntax/fixtures/parser-importexport/: importexport.txt  importexport.txt.expected
syntax/fixtures/parser-itemdecl/: extern-fun-bad-callconv.txt  extern-fun-bad-callconv.txt.expected  extern-fun.txt  extern-fun.txt.expected  fun.txt.expected  import.txt  import.txt.expected
syntax/fixtures/parser-module/: empty-export.txt  empty-export.txt.expected  export.txt  export.txt.expected  simple.txt  simple.txt.expected
syntax/fixtures/parser-stmt/: assign.txt  assign.txt.expected  block-semicolons.txt  block-semicolons.txt.expected  fun-call.txt  fun-call.txt.expected  if-else.txt  if-else.txt.expected  math.txt  math.txt.expected  return.txt  return.txt.expected  while.txt  while.txt.expected
test/: README.md  hello-world
test-runner/: package.yaml
test-runner/app/: Main.hs
test-runner/src/: TestRunner.hs
test-runner/src/TestRunner/: Executor.hs  Lines.hs  Loader.hs  Model.hs  Opts.hs  Scanner.hs
test-utils/: package.yaml
test/items/: function-no-params  function-one-param  function-two-params
test/lexer/: escape-sequences  rawstring  rawstring-with-hash  trim  underscore-in-floats  underscore-in-integers
test/math/: addition  alternative  comparation-equal  comparation-grater  comparation-grater-equal  comparation-less  comparation-less-equal  comparation-not-equal  comparation-strict-equal  comparation-strict-not-equal  conjunction  division  negation  not  parenthesies  projection  substraction
test/module/: assignment  export-file  import-all  import-all-conf  import-id  import-id-as  import-id-as-conf  import-id-conf  import-qid  import-qid-as  import-qid-as-conf  import-qid-conf  reassignment
test/run-pass/items/: function-no-params  function-no-params.ieo  function-one-param  function-one-param.ieo  function-two-params  function-two-params.ieo  testbin.out
test/run-pass/lexer/: escape-sequences  escape-sequences.ieo  rawstring  rawstring-with-hash  rawstring-with-hash.ieo  rawstring.ieo  testbin.out  trim  trim.ieo  underscore-in-floats  underscore-in-floats.ieo  underscore-in-integers  underscore-in-integers.ieo
test/run-pass/math/: addition  addition.ieo  alternative  alternative.ieo  comparation-equal  comparation-equal.ieo  comparation-grater  comparation-grater-equal  comparation-grater-equal.ieo  comparation-grater.ieo  comparation-greater-equal.ieo  not  (+26 more)
(+174 files in other folders)
